Exercícios HTML II

--- a/exercicio1/style.css
+++ b/exercicio1/style.css
@@ -4,7 +4,7 @@
     font-family: 'Helvetica', sans-serif;
   }
   
-  header, .a{
+  #header, .a{
     height: 50px;
     background-color: #5e5e5e;
     width: 100vw;
@@ -12,20 +12,20 @@
     color: white;
   }
   
-  main, .b{
+  #main, .b{
     height: 90vh;
     display: flex;
     flex-direction: row;
     align-items: stretch;
   }
   
-  section, .c{
+  #section, .c{
     background-color: #d4d4d4;
     width: 100%;
     padding: 20px 20px 0 20px;
   }
   
-  article, .d{
+  #article, .d{
     background-color: #dedede;
     height: 25%;
     width: 100%;
@@ -34,7 +34,7 @@
     padding-left: 1%;
   }
   
-  footer, .e{
+  #footer, .e{
     background-color: #242424;
     height: 50px;
     padding: 20px 0 0 20px;
